kubernetes/base/quotes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      service: quotes
  template:
    metadata:
      labels:
        service: quotes
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: quotes-service
        image: ghcr.io/olivinfo/quotes:latest
        ports:
        - containerPort: 5000
