kubernetes/base/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      service: users
  template:
    metadata:
      labels:
        service: users
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: users-service
        image: ghcr.io/olivinfo/users:latest
        ports:
        - containerPort: 5000
